--- a/assets/phantomcatcher/lang/ru_ru.json
+++ b/assets/phantomcatcher/lang/ru_ru.json
@@ -1,14 +1,16 @@
 {
     "pack.phantomcatcher.info": "\n%s %s\n\n%s\n%s\n",
+    "pack.phantomcatcher.links": "\n[%s] [%s] [%s]\n",
+    
     "pack.phantomcatcher.name": "Phantomcatcher",
+    "pack.phantomcatcher.link_github": "GitHub",
+    "pack.phantomcatcher.link_modrinth": "Modrinth",
+    "pack.phantomcatcher.link_planetminecraft": "PlanetMinecraft",
+    
     "pack.phantomcatcher.description": "Способ защититься от появления фантомов",
     "pack.phantomcatcher.author": "Автор: %s",
     "pack.phantomcatcher.version": "Версия: %s",
     "pack.phantomcatcher.get_links": "Ссылки",
-    "pack.phantomcatcher.links": "\n[%s] [%s] [%s]\n",
-    "pack.phantomcatcher.link_github": "GitHub",
-    "pack.phantomcatcher.link_modrinth": "Modrinth",
-    "pack.phantomcatcher.link_planetminecraft": "PlanetMinecraft",
 
     "item.phantomcatcher.phantomcatcher": "Ловец фантомов",
     "item_lore.phantomcatcher.charge": "Заряд: %s / %s",
@@ -16,6 +18,15 @@
 
     "advancements.adventure.phantomcatcher_catches.title": "Спокойная ночь",
     "advancements.adventure.phantomcatcher_catches.description": "Будьте рядом с ловцом фантомов, когда он ловит",
-
-    "emoji.phantomcatcher.phantomcatcher": "1"
+    
+    "options.phantomcatcher.title": "Phantomcatcher",
+    "options.phantomcatcher.settings.title": "Настройки Phantomcatcher",
+    "options.phantomcatcher.settings.external_title": "Настройки...",
+    "options.phantomcatcher.days": "%s: %s дн.",
+    "options.phantomcatcher.chunks": "%s: %s чанков",
+    "options.phantomcatcher.charge_period": "Период зарядки",
+    "options.phantomcatcher.catching_area": "Область ловли",
+    "options.phantomcatcher.catch_renamed_entities": "Ловить сущности с именем",
+    "options.phantomcatcher.reset_on_load": "Сбрасывать при загрузке",
+    "gui.phantomcatcher.apply": "Применить"
 }
