--- a/assets/phantomcatcher/lang/rat.json
+++ b/assets/phantomcatcher/lang/rat.json
@@ -1,14 +1,16 @@
 {
     "pack.phantomcatcher.info": "\n%s %s\n\n%s\n%s\n",
+    "pack.phantomcatcher.links": "\n[%s] [%s] [%s]\n",
+
     "pack.phantomcatcher.name": "Ловец снов",
+    "pack.phantomcatcher.link_github": "ГитХаб",
+    "pack.phantomcatcher.link_modrinth": "Модринт",
+    "pack.phantomcatcher.link_planetminecraft": "Шахтёрская планета",
+
     "pack.phantomcatcher.description": "Штука, чтобы фантомы не кошмарили",
     "pack.phantomcatcher.author": "Автор: %s",
     "pack.phantomcatcher.version": "Версия: %s",
     "pack.phantomcatcher.get_links": "Ссылки",
-    "pack.phantomcatcher.links": "\n[%s] [%s] [%s]\n",
-    "pack.phantomcatcher.link_github": "ГитХаб",
-    "pack.phantomcatcher.link_modrinth": "Модринт",
-    "pack.phantomcatcher.link_planetminecraft": "Шахтёрская планета",
 
     "item.phantomcatcher.phantomcatcher": "Ловец снов",
     "item_lore.phantomcatcher.charge": "Заряд: %s / %s",
@@ -16,6 +18,15 @@
 
     "advancements.adventure.phantomcatcher_catches.title": "Сон для слабаков",
     "advancements.adventure.phantomcatcher_catches.description": "Будьте рядом с ловцом снов, когда он ловит",
-
-    "emoji.phantomcatcher.phantomcatcher": "1"
+    
+    "options.phantomcatcher.title": "Ловец снов",
+    "options.phantomcatcher.settings.title": "Найстроки ловца снов",
+    "options.phantomcatcher.settings.external_title": "Настройки...",
+    "options.phantomcatcher.days": "%s: %s дн.",
+    "options.phantomcatcher.chunks": "%s: %s чанков",
+    "options.phantomcatcher.charge_period": "Период зарядки",
+    "options.phantomcatcher.catching_area": "Область ловли",
+    "options.phantomcatcher.catch_renamed_entities": "Ловить сущности с именем",
+    "options.phantomcatcher.reset_on_load": "Сбрасывать при загрузке",
+    "gui.phantomcatcher.apply": "Применить"
 }
